--- a/gforge/NEWS
+++ b/gforge/NEWS
@@ -1,7 +1,7 @@
 Release notes for FusionForge 5.0
 ---------------------------------
 
-FusionForge x.y is still an incremental step over 4.8, but many
+FusionForge 5.0 is still an incremental step over 4.8, but many
 changes have been made, some of which may require caution when
 upgrading.
 
