--- a/gforge/debian/changelog
+++ b/gforge/debian/changelog
@@ -1,3 +1,9 @@
+fusionforge (5.0-1) unstable; urgency=low
+
+  * New upstream release, woo-hoo!
+
+ -- Roland Mas <lolando@debian.org>  Fri, 26 Mar 2010 11:20:27 +0100
+
 fusionforge (5.0~rc2-1) experimental; urgency=low
 
   * New upstream release candidate.
