--- a/plugins/coclico/mailman/debian/changelog
+++ b/plugins/coclico/mailman/debian/changelog
@@ -1,3 +1,15 @@
+fusionforge-plugin-mailman (1.2.3-1) karmic; urgency=low
+
+  * Modify the creation processus to let admin re-create list with problems 
+
+ -- Mélanie Le Bail <melanie.lebail@orange-ftgroup.com>  Thu, 01 Apr 2010 17:26:57 +0200
+
+fusionforge-plugin-mailman (1.2.2-1) karmic; urgency=low
+
+  * Modify the lists status code to make it the same as original "Lists" in forges.  
+
+ -- Mélanie Le Bail <melanie.lebail@orange-ftgroup.com>  Thu, 01 Apr 2010 13:59:46 +0200
+
 fusionforge-plugin-mailman (1.2-1) unstable; urgency=low
 
   * Initial release
