--- a/plugins/coclico/mailman/debian/changelog
+++ b/plugins/coclico/mailman/debian/changelog
@@ -1,3 +1,9 @@
+fusionforge-plugin-mailman (1.2.4-1) karmic; urgency=low
+
+  * Remove "powered by GForge" on the main age of mailman plugin 
+
+ -- Mélanie Le Bail <melanie.lebail@orange-ftgroup.com>  Fri, 02 Apr 2010 09:28:40 +0200
+
 fusionforge-plugin-mailman (1.2.3-1) karmic; urgency=low
 
   * Modify the creation processus to let admin re-create list with problems 
