--- a/gforge/CHANGES
+++ b/gforge/CHANGES
@@ -1,5 +1,9 @@
 UNRELEASED:
 
+FusionForge-5.1:
+* Trackers: New progressbar to view completion state (when custom status field is used) (Alain Peyrat)
+* Trackers: Sorting improved to allow text & select fields (Alcatel-Lucent)
+
 FusionForge-5.0:
 * New projectlabels plugin, to tag projects with snippets of
   user-defined HTML (developed for/sponsored by Adullact)
