Adding mention of FusionForge being a new name
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@9347 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/README
+++ b/gforge/README
@@ -7,6 +7,9 @@ offering easy access to CVS, SVN and other versioning systems, mailing
 lists, bug tracking, message boards/forums, task management, and permanent
 file archival. It provides full web-based administration.
 
+FusionForge is the new name of the same free software elements that
+were previously named GForge (versions 4.x).
+
 All files contained in this archive are licensed as stated in the
 COPYING file.  Please check out the AUTHORS file to see who helped
 make this possible.
