Fix closing </A> instead of </a>
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@9432 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/translations/fr.po
+++ b/gforge/translations/fr.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: FusionForge 4.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-03-01 22:22+0100\n"
-"PO-Revision-Date: 2010-03-01 22:35+0100\n"
+"PO-Revision-Date: 2010-04-08 19:02+0200\n"
 "Last-Translator: Roland Mas <lolando@debian.org>\n"
 "Language-Team: FusionForge team <fusionforge-general@lists.fusionforge.org>\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -8600,22 +8600,7 @@ msgid ""
 "a>. If you choose not to participate, your ratings of other users will be "
 "permanently deleted and the 'Peer Rating' box will disappear from your user "
 "page.</p>"
-msgstr ""
-"<p>La boîte d'évaluations croisées renvoie les notes moyennes (et les "
-"niveaux de réponse) de chaque critère individuel.  Pour des raisons de "
-"calcul, ces chiffres tiennent compte à la fois des utilisateurs de confiance "
-"et des autres.</p><ul><li>Le champ « rang global » indique le rang de "
-"l'utilisateur comparé à tous les utilisateurs de %1$s classés.</li><li>Le "
-"« score agrégé » indique un score global moyen pondéré, basé uniquement sur "
-"les réponses de confiance.</li><li>Le champ « importance personnelle » "
-"indique le poids que cet utilisateur aura lors de ses évaluations des autres "
-"développeurs (entre 1 et 1,5).</li></ul><p><i>Si vous ne souhaitez pas "
-"participer à ces évaluations (ni en tant qu'évaluateur, ni en tant que sujet "
-"des évaluations), vous pouvez désactiver cette fonction depuis la <a href=\"%"
-"2$s\">page de gestion de votre compte</A>.  Si vous choisissez de ne plus "
-"participer, vos évaluations des autres utilisateurs seront effacées, et la "
-"boîte d'évaluations croisées n'apparaîtra plus sur votre page d'utilisateur."
-"</i></p>"
+msgstr "<p>La boîte d'évaluations croisées renvoie les notes moyennes (et les niveaux de réponse) de chaque critère individuel.  Pour des raisons de calcul, ces chiffres tiennent compte à la fois des utilisateurs de confiance et des autres.</p><ul><li>Le champ « rang global » indique le rang de l'utilisateur comparé à tous les utilisateurs de %1$s classés.</li><li>Le « score agrégé » indique un score global moyen pondéré, basé uniquement sur les réponses de confiance.</li><li>Le champ « importance personnelle » indique le poids que cet utilisateur aura lors de ses évaluations des autres développeurs (entre 1 et 1,5).</li></ul><p><i>Si vous ne souhaitez pas participer à ces évaluations (ni en tant qu'évaluateur, ni en tant que sujet des évaluations), vous pouvez désactiver cette fonction depuis la <a href=\"%2$s\">page de gestion de votre compte</a>.  Si vous choisissez de ne plus participer, vos évaluations des autres utilisateurs seront effacées, et la boîte d'évaluations croisées n'apparaîtra plus sur votre page d'utilisateur.</i></p>"
 
 #: www/include/user_home.php:184
 #, php-format
