New blocks plugin to add HTML blocks on pages
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9490 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/CHANGES
+++ b/gforge/CHANGES
@@ -6,6 +6,8 @@ FusionForge-5.1:
 * [#127] Patch to auto approve projects.
 * scmgit plugin now allows project members to request a personal git
   repository as a clone of the current project's one
+* New blocks plugin, to add free HTML blocks on top of each tools of the project allowing
+  admins to add free descriptions (Alcate-Lucent), (better with fckeditor plugin).
 
 FusionForge-5.0:
 * New projectlabels plugin, to tag projects with snippets of
