Add mailman in main ssl vhost
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9502 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/plugins/coclico/mailman/debian/changelog
+++ b/plugins/coclico/mailman/debian/changelog
@@ -1,3 +1,9 @@
+fusionforge-plugin-mailman (1.2.9-1) karmic; urgency=low
+
+  * Make plugin nicer 
+
+ -- Mélanie Le Bail <melanie.lebail@orange-ftgroup.com>  Wed, 14 Apr 2010 15:02:58 +0200
+
 fusionforge-plugin-mailman (1.2.5-1) unstable; urgency=low
 
   * Some FusionForge renaming
