--- a/gforge/debian/changelog
+++ b/gforge/debian/changelog
@@ -1,3 +1,9 @@
+fusionforge (5.0.1-1) unstable; urgency=low
+
+  * New upstream release (bugfixes and translations).
+
+ -- Roland Mas <lolando@debian.org>  Fri, 30 Apr 2010 16:39:27 +0200
+
 fusionforge (5.0-1) unstable; urgency=low
 
   * New upstream release, woo-hoo!
