Applied patch [#135] Bug in french translation preventing french projects creation
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@9727 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/translations/fr.po
+++ b/gforge/translations/fr.po
@@ -584,7 +584,7 @@ msgstr "ATS%d: %s"
 
 #: common/include/Group.class.php:2061
 msgid "Open-Discussion"
-msgstr "Discussion ouverte"
+msgstr "Discussion-Ouverte"
 
 #: common/include/Group.class.php:2061
 msgid "General Discussion"
