--- a/plugins/coclico/soapadmin/debian/changelog
+++ b/plugins/coclico/soapadmin/debian/changelog
@@ -1,5 +1,5 @@
-fusionforge-plugin-soapadmin (1.0-1) unstable; urgency=low
+fusionforge-plugin-soapadmin (1.0.1-1) unstable; urgency=low
 
-  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  * Initial release
 
  -- Christian Bayle <bayle@debian.org>  Mon, 08 Mar 2010 16:37:51 +0100
