Replace /usr/bin/php4 with /usr/bin/php in all scripts
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/trunk@9946 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/ChangeLog
+++ b/gforge/ChangeLog
@@ -4387,7 +4387,7 @@ Daniel Perez <daniel@gforgegroup.com>
 	* cronjobs/{check_stale_tracker_items.php, db_project_sums.php,
 	massmail.php,project_weekly_metric-backfill.php,
 	stats_projects-backfill.php}: Commonise magic headers to
-	'#! /usr/bin/php4 -f'
+	'#! /usr/bin/php -f'
 
 2002-12-24  Tim Perdue <tim@gforge.org>
 
