--- a/gforge/debian/changelog
+++ b/gforge/debian/changelog
@@ -1,3 +1,9 @@
+fusionforge (5.0.1-1+) UNRELEASED; urgency=low
+
+  * Removed dependency on perl-suid (closes: #581944).
+
+ --
+
 fusionforge (5.0.1-1) unstable; urgency=low
 
   * New upstream release (bugfixes and translations).
