Uploading 5.0.1+svn10006-1 to Debian
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@10006 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/debian/changelog
+++ b/gforge/debian/changelog
@@ -1,8 +1,9 @@
-fusionforge (5.0.1-1+) UNRELEASED; urgency=low
+fusionforge (5.0.1+svn10006-1) unstable; urgency=low
 
+  * New snapshot from upstream SVN (Branch_5_0).
   * Removed dependency on perl-suid (closes: #581944).
 
- --
+ -- Roland Mas <lolando@debian.org>  Tue, 08 Jun 2010 15:54:59 +0200
 
 fusionforge (5.0.1-1) unstable; urgency=low
 
