Uploading 5.0.1+svn10088-1 to Debian
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@10088 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/debian/changelog
+++ b/gforge/debian/changelog
@@ -1,3 +1,9 @@
+fusionforge (5.0.1+svn10088-1) unstable; urgency=low
+
+  * New snapshot from upstream SVN (Branch_5_0).
+
+ -- Roland Mas <lolando@debian.org>  Fri, 18 Jun 2010 13:14:11 +0200
+
 fusionforge (5.0.1+svn10006-1) unstable; urgency=low
 
   * New snapshot from upstream SVN (Branch_5_0).
