--- a/gforge/debian/changelog
+++ b/gforge/debian/changelog
@@ -2,8 +2,10 @@ fusionforge (5.0.1+svn10088-1+) unstable; urgency=low
 
   * Adapted URLs to logos and CSS for gitweb >= 1.7.  Added versioned
     dependency accordingly.
+  * Use local YUI library (over HTTPS if needed) rather than possibly
+    leaking informations to Yahoo's servers (closes: #579459).
 
- -- Roland Mas <lolando@debian.org>  Thu, 24 Jun 2010 14:02:29 +0200
+ -- Roland Mas <lolando@debian.org>  Mon, 28 Jun 2010 10:27:51 +0200
 
 fusionforge (5.0.1+svn10088-1) unstable; urgency=low
 
