--- a/gforge/debian/changelog
+++ b/gforge/debian/changelog
@@ -1,3 +1,10 @@
+fusionforge (5.0.1+svn10155-1) unstable; urgency=low
+
+  * Fixed embedded copy of viewvc for Python 2.6 (closes: #582012).
+  * Also removed dependency on external viewvc until propely fixed.
+
+ -- Roland Mas <lolando@debian.org>  Tue, 29 Jun 2010 14:23:08 +0200
+
 fusionforge (5.0.1+svn10137-1) unstable; urgency=low
 
   * Adapted URLs to logos and CSS for gitweb >= 1.7.  Added versioned
