Switch to Unix sockets for DB access (Debian-specific patch, in preparation for post-5.0 upgrade)
git-svn-id: svn+ssh://scm.fusionforge.org/srv/svn/fusionforge/branches/Branch_5_0@10156 9d84d37e-dcb1-4aad-b103-6f3d92f53bf6

--- a/gforge/debian/changelog
+++ b/gforge/debian/changelog
@@ -1,3 +1,9 @@
+fusionforge (5.0.1+svn10155-1+) UNRELEASED; urgency=low
+
+  * Switch to Unix sockets for DB access by default.
+
+ -- Roland Mas <lolando@debian.org>  Wed, 30 Jun 2010 16:10:58 +0200
+
 fusionforge (5.0.1+svn10155-1) unstable; urgency=low
 
   * Fixed embedded copy of viewvc for Python 2.6 (closes: #582012).
